--- a/src/index.css
+++ b/src/index.css
@@ -4,20 +4,172 @@
     url('./assets/fonts/Neutra Text Font.otf') format('otf');
 }
 
+/* reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Neutera', sans-serif;
+}
 body {
-  font-family: 'Neutera', serif;
-}
-
-.container {
+  background-color: #f1f1f1;
   max-width: 1280px;
+  min-height: 100vh;
+  margin: auto;
 }
 
-.table-heading {
-  background-color: #c0e3e5;
+.capitalize {
+  text-transform: capitalize;
+}
 
-  & th {
-    padding: 10px;
-    text-transform: uppercase;
-    font-size: 18px;
+.breadcrumb {
+  display: flex;
+  gap: 5px;
+  margin: 40px 0 40px;
+}
+
+.breadcrumb li {
+  list-style: none;
+}
+
+.breadcrumb li .active {
+  font-weight: 600;
+}
+
+.breadcrumb li .active::after {
+  content: '';
+  width: 100%;
+  height: 4px;
+  background: orange;
+  display: block;
+  margin: auto;
+}
+
+.breadcrumb li a {
+  text-decoration: none;
+  color: black;
+}
+
+.filter {
+  display: flex;
+  margin: 20px 0 20px;
+}
+
+.search-box {
+  height: 40px;
+  border-radius: 40px;
+  padding: 10px;
+}
+
+.search-box:hover > .search-text {
+  width: 260px;
+  padding: 0 6px;
+}
+
+.search-box:hover > .search-btn {
+  background: #ebebeb;
+  color: black;
+}
+
+.search-btn {
+  color: #e84118;
+  float: right;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #ebebeb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.4s;
+  cursor: pointer;
+  text-decoration: none;
+}
+.search-btn > i {
+  font-size: 30px;
+}
+
+.search-text {
+  border: none;
+  background: none;
+  outline: none;
+  float: left;
+  padding: 0;
+  color: black;
+  font-size: 16px;
+  font-weight: normal;
+  transition: 0.4s;
+  line-height: 40px;
+  width: 0px;
+  background-color: #ebebeb;
+}
+/* wrapper */
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+/* title */
+.title-container {
+  height: 40px;
+  border-radius: 8px;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  color: #606060;
+  font-weight: 400;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+}
+/* table */
+.table-container {
+  border: 1px solid #e8e7e7;
+  border-radius: 11px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  width: 100%;
+}
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+/* table-border */
+tbody tr {
+  border-bottom: 1px solid #e8e7e7;
+}
+tbody tr td {
+  border-left: 1px solid #e8e7e7;
+}
+
+/* style tr, td, th */
+tr th {
+  font-size: 14px;
+  font-weight: 500;
+  color: #322625;
+  background-color: #c0e3e5;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+tr td {
+  color: #606060;
+  font-size: 14px;
+}
+th,
+td {
+  padding: 16px;
+  text-align: center;
+}
+/* even and odd color */
+tbody tr:nth-child(odd) {
+  background-color: #fff;
+}
+tbody tr:nth-child(even) {
+  background-color: #f8f8f8;
+}
+/* media query */
+@media only screen and (max-width: 600px) {
+  .table-container {
+    width: 303px;
+    overflow-x: auto;
   }
 }
