--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,8 @@ body {
   background-color: #f1f1f1;
   max-width: 1280px;
   min-height: 100vh;
-  margin: auto;
+  margin: auto 0;
+  padding: 30px;
 }
 
 .capitalize {
